--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "bcryptjs": "^2.4.3",
+      "class-transformer": "^0.5.1",
+      "class-validator": "^0.14.0",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "morgan": "^1.10.0",
@@ -20,6 +23,7 @@
       "typeorm": "0.3.11"
    },
    "devDependencies": {
+      "@types/bcryptjs": "^2.4.2",
       "@types/express": "^4.17.15",
       "@types/morgan": "^1.9.3",
       "@types/node": "^16.11.10",
