--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "postcss-preset-env": "^7.8.3",
     "prettier": "2.8.3",
     "tailwindcss": "^3.2.4"
